mesh peerings: update to new prefix

--- a/mesh_peerings.yaml
+++ b/mesh_peerings.yaml
@@ -1,6 +1,6 @@
 hh-gw01:
   ipv4: "10.112.14.1"
-  ipv6: "fd51:2bb2:fd0d::e01"
+  ipv6: "2a03:2267::e01"
 
 hh-gw02:
   ipv4: "10.112.42.1"
@@ -12,16 +12,16 @@ hh-gw03:
 
 hh-gw05:
   ipv4: "10.112.18.1"
-  ipv6: "fd51:2bb2:fd0d::d01"
+  ipv6: "2a03:2267::d01"
 
 hh-gw08:
   ipv4: "10.112.22.1"
-  ipv6: "fd51:2bb2:fd0d::b01"
+  ipv6: "2a03:2267::b01"
 
 hh-srv01:
   ipv4: "10.112.1.1"
-  ipv6: "fd51:2bb2:fd0d::101"
+  ipv6: "2a03:2267::101"
 
 hh-srv02:
   ipv4: "10.112.1.2"
-  ipv6: "fd51:2bb2:fd0d::102"
+  ipv6: "2a03:2267::102"
